# hackathon_yandex

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Screenshots/: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  schema.yaml
backend/api/: serializers.py  tests.py  urls.py  utils.py  views.py
backend/backend/: __init__.py  settings.py  urls.py
backend/data/: courses.csv  professions.csv
backend/direction/: admin.py  apps.py  models.py
backend/direction/management/commands/: create_courses.py  create_direction.py  create_profession.py  create_users.py  load_fixture.py
backend/direction/migrations/: 0001_initial.py  0002_alter_profession_description.py  0002_alter_professionindirection_options_and_more.py  0003_alter_course_price.py  0004_remove_direction_courses_dir_course_direction.py  0005_remove_direction_link.py  0006_alter_course_link.py  0007_remove_course_direction_course_professions_and_more.py  0008_alter_professionindirection_options_and_more.py  0009_alter_course_professions.py
backend/tests/: test_api.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py  0002_alter_usergrademap_end_level_and_more.py  0003_alter_user_courses_alter_usergrademap_end_prof_and_more.py  0004_alter_user_email_alter_usergrademap_end_level_and_more.py  0005_alter_user_courses.py  0006_alter_user_courses.py
nginx/: nginx.conf
